--- a/css/styles.css
+++ b/css/styles.css
@@ -151,7 +151,7 @@ h1 {
 }
 
 .dark {
-    background: #26242E;
+    background: #26242E !important;
     box-shadow: -11px 11px 22px #201f27,
         11px -11px 22px #2c2935;
     color: #fff;
@@ -181,12 +181,8 @@ h1 {
     resize: none;
     width: auto;
     float: left;
-    width: 100%;
-    height: 100%;
-    /* max-width: 100%; */
-    /* width: 100%; */
-    /* align-items: flex-start; */
-    /* display: inline-block; */
+    /* height: 100%; */
+    background: none;
 }
 
 .text-container-wrapper {
@@ -213,6 +209,7 @@ h1 {
 .text-container {
     margin-bottom: 80px;
     padding-bottom: 60px;
+    margin-top: 40px;
 }
 
 .preview h1,
